--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -33,7 +33,7 @@ Payment via paypal to chris1howell83@gmail.com
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
 || 1 || Sven.Leser || Built || RGB LCD Built - Int Ship || Paid || Picked up 3/6 ||
 || 2 || serge.bierhuizen || Built || RGB RTC built - EV Sim || Paid || ||
-|| 3 || rmbertjones || Kit || EV Sim Kit || Paid || ||
+|| 3 || rmbertjones || Kit || EV Sim Kit || Paid || Shipped 3/12 ||
 || 4 || Krull.Justin ||Kit || RGB kit - EV sim kit || Paid || Shipped 3/11 ||
 || 5 || michaelma8888 || Built || RGB LCD || Paid || ||
 || 6 || flbas1 || Built || RGB LCD || || ||
@@ -45,12 +45,12 @@ Payment via paypal to chris1howell83@gmail.com
 || 12 || skider67 (France) || Kit || Kit || Paid || ||
 || 13 || hexidecimalgadget || Built || RGB LCD Built - EV sim || Paid || || 
 || 14 || thadthig || Built || RGB LCD Built || Paid || ||
-|| 15 || louisfulton || Kit || || Paid || ||
+|| 15 || louisfulton || Kit || || Paid || Shipped 3/12 ||
 || 16 ||  gt1485a || Kit || || Paid || Shipped 3/11||
 || 17 || wigthft || Built || RGB LCD Built - EV Sim || || ||
 || 18 || jackncoke72 || Built || || Paid || ||
 || 19 || 3400broadway || Built || LCD Built || Paid || ||
-|| 20 ||  bikekite || Kit || || Paid || ||
+|| 20 ||  bikekite || Kit || || Paid || Shipped 3/12 ||
 || || ellweber || Built|| RGB LCD RTC Built - EV Sim || Paid || ||
 || ||  jpaction1964 || Built || || Paid || ||
 || || rocketguy || Built || RGB LCD Built || || ||
@@ -63,7 +63,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || derekdebu ~ship add in e-mail|| Built || || Paid || ||
 || ||  llMGAll || Built || RGB LCD RTC Built || Paid || ||
 || ||  troy.varela || Built || RBG LDC RTC Built || || ||
-|| || dcollins7 ||Kit || LCD kit || Paid || ||
+|| || dcollins7 ||Kit || LCD kit || Paid || Shipped 3/12 ||
 || || S.Ciesemier || Built || EV SIM || Paid || ||
 || || evnow || Built || LCD RTC Built -EV sim || || ||
 || || 90410 || || || || ||
@@ -72,7 +72,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || cathie || Built || LCD RTC Built - EV Sim || Paid || ||
 || || devincarlisto || Built || LCD Built || || || 
 || || iainbarnes || Built|| LCD RTC Built - EV sim || Paid || ||
-|| || jaquescolin || kit || LCD kit - EV Sim || Paid || ||
+|| || jaquescolin || kit || LCD kit - EV Sim || Paid || Shipped 3/12 ||
 || || mc.lacey || Built || || || || 
 || || King || Built || LCD RTC Built || Paid || ||
 || || fiester || Built || LCD RTC Built - EVSIM || Paid || ||
@@ -81,6 +81,6 @@ Payment via paypal to chris1howell83@gmail.com
 || || dkatz || Built || LCD RTC Built || Paid || ||
 || || mlegatt || Built || LCD RTC Built - EV Sim || Paid || ||
 || || grassshawn || Built || LCD RTC Built - EV Sim || Paid || ||
-|| || SkiSky1 || Kit || EV Sim || Paid || ||
+|| || SkiSky1 || Kit || EV Sim || Paid || Shipped 3/12 ||
 || || walter || Built || LCD RTC built -EV Sim || Paid || ||
 || || mb2452 || Built || || || ||
