--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -85,3 +85,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || walter || Built || LCD RTC built -EV Sim || Paid || ||
 || || mb2452 || Built || || || ||
 || || markdinh || Built || LCD RTC built - EVSim || Paid || ||
+|| || Bas || Built INT || LCD RTC built - EVSim || Paid || ||
