--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -32,29 +32,29 @@ Payment via paypal to chris1howell83@gmail.com
 
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
 || 1 || Sven.Leser || Built || RGB LCD Built - Int Ship || Paid || Picked up 3/6 ||
-|| 2 || serge.bierhuizen || Built || RGB RTC built - EV Sim || Paid || ||
+|| 2 || serge.bierhuizen || Built || RGB RTC built - EV Sim || Paid || Shipped 3/18 ||
 || 3 || rmbertjones || Kit || EV Sim Kit || Paid || Shipped 3/12 ||
 || 4 || Krull.Justin ||Kit || RGB kit - EV sim kit || Paid || Shipped 3/11 ||
-|| 5 || michaelma8888 || Built || RGB LCD || Paid || ||
+|| 5 || michaelma8888 || Built || RGB LCD || Paid || Shipped 3/18 ||
 || 6 || flbas1 || Built || RGB LCD || || ||
-|| 7 || VintageAirLLC || Built || || Paid || ||
+|| 7 || VintageAirLLC || Built || || Paid || Shipped 3/18||
 || 8 || cjswan ||	Kit || || Paid || Shipped 3/11 || 
 || 9 || maboutte || Kit || RGB LCD RTC kit || Paid || Shipped 3/11 ||
-|| 10 ||  2sign || Built || RGB LCD Built - EV SIM || Paid || ||
+|| 10 ||  2sign || Built || RGB LCD Built - EV SIM || Paid || Shipped 3/18||
 || 11 || Mathieu (France) ~2 || Built || RGB LCD RTC Built - EV sim || Paid || ||
 || 12 || skider67 (France) || Kit || Kit || Paid || ||
-|| 13 || hexidecimalgadget || Built || RGB LCD Built - EV sim || Paid || || 
-|| 14 || thadthig || Built || RGB LCD Built || Paid || ||
+|| 13 || hexidecimalgadget || Built || RGB LCD Built - EV sim || Paid || Shipped 3/18 || 
+|| 14 || thadthig || Built || RGB LCD Built || Paid || Shipped 3/18 ||
 || 15 || louisfulton || Kit || || Paid || Shipped 3/12 ||
 || 16 ||  gt1485a || Kit || || Paid || Shipped 3/11||
 || 17 || wigthft || Built || RGB LCD Built - EV Sim || || ||
-|| 18 || jackncoke72 || Built || || Paid || ||
+|| 18 || jackncoke72 || Built || || Paid || Shipped 3/18 ||
 || 19 || 3400broadway || Kit || LCD RTC Kit - EVsim || Paid || ||
 || 20 ||  bikekite || Kit || || Paid || Shipped 3/12 ||
-|| || ellweber || Built|| RGB LCD RTC Built - EV Sim || Paid || ||
-|| ||  jpaction1964 || Built || || Paid || ||
+|| || ellweber || Built|| RGB LCD RTC Built - EV Sim || Paid || Shipped 3/18 ||
+|| ||  jpaction1964 || Built || || Paid || Shipped 3/18 ||
 || || rocketguy || Built || RGB LCD Built || || ||
-|| || propoxyphene12 || Built || RGB LCD w RTC || Paid || ||
+|| || propoxyphene12 || Built || RGB LCD w RTC || Paid || Shipped 3/18 ||
 || || rfulcher || Kit || || || || 
 || || Jay || Built || RGB LCD Built - EV Sim || Paid || ||
 || || ales || Built || RGB LCD Built || || ||
