--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -1,7 +1,7 @@
 #summary February Batch.
 
 = Introduction =
-*Update 3/11* Boards are in and shipping has started for the kits. Built and tested will follow as fast as I can finish the assembly...
+*Update 3/11* Boards are in and shipping has started for the kits. Built and International (Kit - Built) will follow as fast as I can finish the assembly...
 
 *Update 3/4* The first test board passed 100% of the tests, the first 10 boards will ship this week. The remaining 90 boards should be here any day now...
 
