Edited wiki page AtmelStudio through web user interface.

--- a/wiki/AtmelStudio.wiki
+++ b/wiki/AtmelStudio.wiki
@@ -9,7 +9,9 @@ Directions for compiling and loading firware with Atmel Studio.
 == Download and install Atmel Studio ==
 [http://www.atmel.com/tools/atmelstudio.aspx Atmel Studio] is a free development environment for the MS Windows environment. Once you get it installed and running, everything is point and click. There are no command lines to type or external tools like AVRDude required. *PLEASE NOTE:* Atmel Studio 6 seems to be very buggy and unstable. I encountered many problems trying to program chips. Mostly, it just refuses to enter programming mode. It also wouldn't reset incorrect fuses even when using HVPP mode (see below for more about this).  I finally gave up and went back to AVR Studio 4.19, which is available here: http://www.atmel.com/tools/avrstudio4.aspx and all those buggy problems went away. I HIGHLY recommend skipping the frustration of Studio 6 and just use the older Studio 4. In this case, newer is definitely NOT better! 
 
-Installing the Atmel Studio 6 took nearly 3 hours total because it's built on the .NET framework and required a lot of extra downloading and rebooting. Studio 4 took about 5 minutes with a simple download, install, and start using it. No reboots. If I haven't convinced you to avoid Studio 6 yet, please see a psychiatrist to adjust your meds! Once Studio 4 is installed and running you can create a new project. Give it a useful name like "ATOpenEVSE". 
+Installing the Atmel Studio 6 took nearly 3 hours total because it's built on the .NET framework and required a lot of extra downloading and rebooting. Studio 4 took about 5 minutes with a simple download, install, and start using it. No reboots. If I haven't convinced you to avoid Studio 6 yet, please see a psychiatrist to adjust your meds! 
+
+After installing Studio 4, you need to do a separate download and install of the AVR Tool Chain 3.3.0. This is available from the same lauch page where you found Studio 4. Once Studio 4 and the AVR Tool Chain are installed and running you can start AVR Studio and create a new project. Give it a useful name like "ATOpenEVSE". 
 
 == A few notes about ISP programmers ==
 You can use just about any ISP programmer. The [http://store.atmel.com/PartDetail.aspx?q=p:10500054#tc:description AVRISP mkII] (~$35) is very popular. The [http://store.atmel.com/PartDetail.aspx?q=p:10500053#tc:description AVR Dragon] (~$50) is my prefered weapon and most of my tutorial is written while using one. For those who have big budgets, the [http://store.atmel.com/PartDetail.aspx?q=p:10500155#tc:description STK600] (~$200) is the ultimate programmer/debugger board. Many people get by with a simple _bit banger_ programmer (Google it) for less than $20. There is a very nice tutorial at [http://www.ladyada.net/learn/avr/programmers.html LadyAda.net] that discusses programmer selection plus a whole lot more for AVR projects. It's worth spending 20 minutes reading through the whole tutorial.
