Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -92,3 +92,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || markdinh || Built || LCD RTC built - EVSim || Paid || ||
 || || Bas || Built INT || LCD RTC built - EVSim || Paid || ||
 || || jdbui.nmr || Built || LCD RTC built || Paid || ||
+|| || j.scutzlas || Built || LCD RTC built || Paid || ||
