Edited wiki page Ordering through web user interface.

--- a/wiki/Ordering.wiki
+++ b/wiki/Ordering.wiki
@@ -19,8 +19,9 @@ Prices $USD
 
 || *Kit Package:* _OpenEVSE Plus (v2), RGB LCD, w/std US shipping_ || *$165* ||
 || *Kit Package with EV Simulator:* || *$180* ||
-|| *Built Package:* _OpenEVSE Plus (v2), LCD w/RTC, Assembled & Tested, w/std US shipping_ || *$210* ||
-|| *Built Package with EV Simulator:* || *$225* ||
+|| *Built Package:* _OpenEVSE Plus (v2), RGB LCD, Assembled & Tested, w/std US shipping_ || *$200* ||
+|| *Built Package with EV Simulator:* || *$215* ||
+|| *Upgrade LCD with RTC* || add $10 ||
 
 
 
