--- a/wiki/OpenEVSE_LCD_spec.wiki
+++ b/wiki/OpenEVSE_LCD_spec.wiki
@@ -30,3 +30,21 @@ L - Left - Not currently used
  
 
 To enable the button on the LCD solder a wire (not included in kit) to the S - Select hole and another wire to any of the ground holes. Connect to a normaly Open momentary button. A lit button can be connected using Ground, +5v and Select.
+
+== Assemble the RGB LCD and shield ==
+
+The LCD comes as a small kit containing a shield board, the LCD board, a pin header, 4 plastic spacers, and a jumper wire. The following photos show how to assemble them.
+http://i833.photobucket.com/albums/zz256/aeronutt/Open%20EVSE%20Plus%20v2/Shield1JPG.jpg
+Notice that the angled 4-pin header points away from the surface mount component. If you do it the other way, it will interfere. 
+*IMPORTANT NOTE:* Remember the little component labelled "VR-1" in the lower left corner of this picture. You will need to turn that with a tiny screwdriver after the project is complete to set the display brightness the first time you power up your EVSE.
+
+http://i833.photobucket.com/albums/zz256/aeronutt/Open%20EVSE%20Plus%20v2/Shield2.jpg
+
+Solder the .1" header pins to the controller board.  
+Once the headers are soldered to the shield board, place the LCD board over the header row as shown below. Be sure to place the 4 plastic spacers at each corner prior to soldering the pins!
+
+http://i833.photobucket.com/albums/zz256/aeronutt/Open%20EVSE%20Plus%20v2/Shield3.jpg
+
+To add a control button, you need to solder .1" header pins or wires into the shield board. Connect one to any of the 5 ground pads and the other to the "S" pad. If using a lit button solder to GND, +5v and "S"
+
+http://i833.photobucket.com/albums/zz256/aeronutt/Open%20EVSE%20Plus%20v2/Button1.jpg
