--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -24,7 +24,7 @@
     * [LoadingFirmware Load Firmware with Arduino IDE]
     * [AVRDUDE Load Firmware with AVRDude]
     * [AtmelStudio Load Firmware with Atmel Studio]
-    * [AdaFruitRGBdisplay Add a display]
+    * [OpenEVSE_LCD_spec Add a display]
     * [MaxCurrent Set Default Current]
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
   * *Do it Yourself*
