--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -59,7 +59,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 20 ||  bikekite || Kit || || Paid || Shipped 3/12 ||
 || || ellweber || Built|| RGB LCD RTC Built - EV Sim || Paid || Shipped 3/18 ||
 || ||  jpaction1964 || Built || || Paid || Shipped 3/18 ||
-|| || rocketguy || Built || RGB LCD Built || Paid || ||
+|| || rocketguy || Built || RGB LCD Built || Paid || Shipped 3/27 ||
 || || propoxyphene12 || Built || RGB LCD w RTC || Paid || Shipped 3/18 ||
 || || rfulcher || Kit || || || || 
 || || Jay || Built || RGB LCD Built - EV Sim || Paid || ||
