--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -62,17 +62,17 @@ Payment via paypal to chris1howell83@gmail.com
 || || rocketguy || Built || RGB LCD Built || Paid || Shipped 3/27 ||
 || || propoxyphene12 || Built || RGB LCD w RTC || Paid || Shipped 3/18 ||
 || || rfulcher || Kit || || || || 
-|| || Jay || Built || RGB LCD Built - EV Sim || Paid || ||
+|| || Jay || Built || RGB LCD Built - EV Sim || Paid || Shipped 3/27 ||
 || || ales || Built || RGB LCD Built || || ||
-|| || jebork || Built || RGB LCD Built - EV Sim || Paid || ||
+|| || jebork || Built || RGB LCD Built - EV Sim || Paid || Shipped 3/27 ||
 || || dlrodd || Built|| RGB LCD RTC Built - EV Sim || || ||
-|| || derekdebu ~ship add in e-mail|| Built || || Paid || ||
+|| || derekdebu ~ship add in e-mail|| Built || || Paid || Shipped 3/27 ||
 || ||  llMGAll || Built || RGB LCD RTC Built || Paid || ||
 || ||  troy.varela || Built || RBG LDC RTC Built || || ||
 || || dcollins7 ||Kit || LCD kit || Paid || Shipped 3/12 ||
-|| || S.Ciesemier || Built || EV SIM || Paid || ||
+|| || S.Ciesemier || Built || EV SIM || Paid || Shipped 3/27 ||
 || || evnow || Built || LCD RTC Built -EV sim || || ||
-|| || 90410 || Kit || || Paid || ||
+|| || 90410 || Kit || || Paid || Shipped 3/27||
 || || chrisacone || Built|| LCD RTC Built - EV sim || Paid || ||
 || || mkfiester || Built || LCD RTC Built - EV Sim || || ||
 || || cathie || Built || LCD RTC Built - EV Sim || Paid || ||
