Edited wiki page AssemblyGuide through web user interface.

--- a/wiki/AssemblyGuide.wiki
+++ b/wiki/AssemblyGuide.wiki
@@ -1,5 +1,5 @@
 =Guide for Assembling a J1772, 30A OpenEVSE.=
-  * ====Using OpenEVSE Plus v1 (updated for v2)====
+  ==Using OpenEVSE Plus v1 (updated for v2)==
 
 = Usual Disclaimers =
 
