--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -93,3 +93,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || Bas || Built INT || LCD RTC built - EVSim || Paid || ||
 || || j.scutzlas || Built || LCD RTC built || Paid || ||
 || || jbesteele || Built || LCD RTC Built || Paid || || 
+|| || honks || Built || LCD Built || Paid || ||
