--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -94,3 +94,8 @@ Payment via paypal to chris1howell83@gmail.com
 || || j.scutzlas || Built || LCD RTC built || Paid || ||
 || || jbesteele || Built || LCD RTC Built || Paid || || 
 || || honks || Built || LCD Built || Paid || ||
+|| || waynesb || Built || RTC - EV Sim || Paid || Workshop ||
+|| || karahalios || Kit || || Paid || ||
+|| || Keenan || Built || LCD || Paid || Workshop ||
+|| || Wicker || Built || LCD || Paid || Workshop ||
+ 
