Edited wiki page February through web user interface.

--- a/wiki/February.wiki
+++ b/wiki/February.wiki
@@ -98,4 +98,6 @@ Payment via paypal to chris1howell83@gmail.com
 || || karahalios || Kit || || Paid || ||
 || || Keenan || Built || LCD || Paid || Workshop ||
 || || Wicker || Built || LCD || Paid || Workshop ||
+|| ||  troypearce  || Kit || LCD KIT || Paid || ||
+|| || beaver || || RTC LCD kit EV Sim || Paid || ||
  
